# model/login.go
@@ -1,8 +1,8 @@
 package model
 
 // LoginRequest represents login credentials
-// @Description Kullanıcı giriş bilgileri
+// @Description Kullanıcı giriş bilgileri (email veya telefon ile)
 type LoginRequest struct {
-	Email    string `json:"email" example:"ahmet.yilmaz@example.com" binding:"required,email"` // E-posta adresi
-	Password string `json:"password" example:"123456" binding:"required,min=6"`                // Şifre
+	EmailOrPhone string `json:"email_or_phone" example:"ahmet.yilmaz@example.com" binding:"required"` // E-posta adresi veya telefon numarası
+	Password     string `json:"password" example:"123456" binding:"required,min=6"`                   // Şifre
 }
